<resources>
    <string name="app_name">ChatApplication</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_button">Login</string>
    <string name="or_create_my_account">Or Create My Account</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="last_name">Last Name</string>
    <string name="the_movies_zone">The Movies Zone</string>
    <string name="type_a_message">Type a message</string>

    <string-array name="categories">
        <item>Select Room Category</item>
        <item>Movies</item>
        <item>Music</item>
        <item>Sports</item>
    </string-array>
</resources>