<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dataRegister"
            type="com.example.chatapplication.register.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_top"
        tools:context=".register.RegisterActivity">

        <TextView
            android:id="@+id/create_account_TextView"
            style="@style/titleStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname_createAcc_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            error="@{dataRegister.firstNameError}"
            android:hint="@string/first_name"
            app:layout_constraintTop_toBottomOf="@+id/guidLine">

            <EditText
                android:id="@+id/editTextFirstname"
                style="@style/fieldsStyle"
                android:text="@={dataRegister.firstName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname_createAcc_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/last_name"
            error="@{dataRegister.lastNameError}"
            app:layout_constraintTop_toBottomOf="@+id/firstname_createAcc_TextInputLayout">

            <EditText
                android:id="@+id/editTextLastname"
                style="@style/fieldsStyle"
                android:text="@={dataRegister.lastName}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_address_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/e_mail_address"
            error="@{dataRegister.emailError}"
            app:layout_constraintTop_toBottomOf="@+id/lastname_createAcc_TextInputLayout">

            <EditText
                android:id="@+id/editTextEmailAddress"
                style="@style/fieldsStyle"
                android:text="@={dataRegister.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_create_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            error="@{dataRegister.passwordError}"
            app:layout_constraintTop_toBottomOf="@+id/email_address_TextInputLayout">


            <EditText
                android:id="@+id/editTextPassword_createAcc"
                style="@style/fieldsStyle"
                android:text="@={dataRegister.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_account_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:gravity="start"
            android:onClick="@{()->dataRegister.createAccount()}"
            android:padding="18dp"
            android:text="Create Account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_create_TextInputLayout" />

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:onClick="@{()->dataRegister.finish()}"
            app:layout_constraintBottom_toBottomOf="@id/create_account_TextView"
            app:layout_constraintStart_toStartOf="@id/create_account_TextView"
            app:layout_constraintTop_toTopOf="@id/create_account_TextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>